vlib/v/parser/tests/fn_type_only_args_in_interfaces.vv

struct Type1 {}
struct Type2 {}
struct Type3 {}


pub interface Widget1 {
  init(Type1, Type2)
}

pub interface Widget2 {
  init(Type1)
  draw(Type2, Type3)
}

pub interface Widget3 {
  fnoparams1()
  fnoparams2()
  draw(Type1, Type2)
}

syntax_error
